[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Player/whip5.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/whip1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/player_idle1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/player_climb2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player/whip2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player/player_grab.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/player_idle2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/player_climb1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player/whip3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/whip4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/player_walk_1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player/player_walk_2.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ) ],
"loop": true,
"name": "climbing",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "climbing_stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 1 ) ],
"loop": false,
"name": "whiping",
"speed": 13.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "hanging",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.96768, 5.36925 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 50, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -10 )
current = true
zoom = Vector2( 0.18, 0.18 )
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 512
smoothing_enabled = true
smoothing_speed = 7.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.00509, 0.993949 )
frames = SubResource( 3 )
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="whip_node" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
disabled = true

[node name="LedgeY" type="RayCast2D" parent="."]
position = Vector2( 7, -10 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 8
collide_with_areas = true

[node name="LedgeX" type="RayCast2D" parent="."]
position = Vector2( 6, -2 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 8
collide_with_areas = true

[node name="ladderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -3 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 1 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="ladderCheck2" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 1 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.00392157, 0.996078, 0.27451, 1 )
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="webDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="web" type="CollisionShape2D" parent="webDetect"]
shape = SubResource( 5 )

[node name="exitDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="exitDetect"]
shape = SubResource( 6 )

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="webDetect" to="." method="_on_webDetect_area_entered"]
[connection signal="area_exited" from="webDetect" to="." method="_on_webDetect_area_exited"]
[connection signal="body_entered" from="exitDetect" to="." method="_on_exitDetect_body_entered"]
[connection signal="body_exited" from="exitDetect" to="." method="_on_exitDetect_body_exited"]
